@@ -5,6 +5,6 @@ def execute(scope, prefixes, destination, default_mask = [24]):
     for prefix in prefixes:
         (network, pfxlen) = util.parse_prefix(prefix, default_mask[0])
         mask              = util.pfxlen2mask(pfxlen)
-        if needle & mask == network:
+        if needle & mask == network & mask:
             return [1]
     return [0]
